[8.2.0] Update to JDK 24 where possible
This enables `--host_jvm_args=-XX:+UnlockExperimentalVMOptions --host_jvm_args=-XX:+UseCompactObjectHeaders` to noticeably reduce Bazel's memory usage.

Updates Guava to 33.4.5, which uses `VarHandle` instead of `Unsafe`. Warnings for `Unsafe` usage still show up due to missing `VarHandle` support in protobuf and have to be silenced.

Closes #25623.

PiperOrigin-RevId: 738847656
Change-Id: Ic5da079b556d5a3a7fe08e54722f50df6b47a54c
(cherry picked from commit a06a6a2d8564eebdcc294c5871f47a57977bdba8)